--- a/branding.html
+++ b/branding.html
@@ -2,21 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>Full Motion</title>
+    <title>Z</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/mainstyle.css" />
+    <link rel="stylesheet" href="mainstyle.css" />
 </head>
 
 <body id="top">
     <!-- NAV BAR-->
     <nav>
-        <div class="title-wrapper">
+        <div class="title-wrapper-1">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -27,7 +26,7 @@
         <!--  <video>
                 <source src="assets/mybulb.mp4" type="video/mp4">
             </video> -->
-        <img class="img-zoe" src="assets/photographybanner.jpg" alt="Malta">
+        <img class="img-zoe" src="images/banners/branding.jpg" alt="branding banner">
         <h1>LOREM IPSUM</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, odit! Optio delectus reiciendis
             deserunt! Porro voluptas velit autem, delectus reprehenderit perferendis hic debitis excepturi,
@@ -46,44 +45,46 @@
                 <div class="thumbnails">
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="assets/Branding/Folder.jpg"
+                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/branding/EventPlanner/images2.jpg"
                                 alt="" /></a>
                         <div class="inner">
                             <h3>Nascetur nunc varius commodo</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
                                 nunc
                                 non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">ANDREW
-                                & RACHEL</a>
+                            <a href="andrewrachel.html" class="button fit" data-poptrox="youtube,800x400">MY EVENT
+                                PLANNER</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="assets/book/Cover double.png"
+                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/branding/The Mill/images12.jpg"
                                 alt="" /></a>
                         <div class="inner">
                             <h3>Nascetur nunc varius commodo</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
                                 nunc
                                 non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">BECKY
-                                & STEVE</a>
+                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">THE
+                                MILL</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="assets/images/Malta/DSC_0062-14-26.jpg"
-                                alt="" /></a>
-                        <div class="inner">
+                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/branding/The Yuppie/yuppie2.jpg" /></a>
+                        <div class="
+                                inner">
                             <h3>Nascetur nunc varius commodo</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
                                 nunc
                                 non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">LAURA
-                                & MATT</a>
+                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">THE
+                                YUPPIE
+                            </a>
                         </div>
                     </div>
 
+                    <!-- <div class="box">
                     <div class="box">
                         <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
                         <div class="inner">
@@ -93,27 +94,7 @@
                                 non. Mi accumsan.</p>
                             <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">MALTA</a>
                         </div>
-                    </div>
-
-                    <!--<div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-                        <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
-                        </div>
-                    </div>
-
-                    <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-                        <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a> -->
+                    </div> -->
                 </div>
             </div>
         </div>
