--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
                 <div class="thumbnails">
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/branding/EventPlanner/images2.jpg"
-                                alt="" /></a>
+                        <a href="branding.html" class="image fit"><img src="images/branding/EventPlanner/images2.jpg"
+                                alt="event planner sign" /></a>
                         <div class="inner">
                             <h3>Nascetur nunc varius commodo</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
                                 nunc
                                 non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button fit">BRANDING</a>
+                            <a href="branding.html" class="button fit">BRANDING</a>
                         </div>
                     </div>
 
                     <div class="box">
                         <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/book/images17.jpg"
-                                alt="" /></a>
+                                alt="SAC yearbook 2018" /></a>
                         <div class="inner">
                             <h3>Nascetur nunc varius commodo</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
@@ -70,7 +70,7 @@
 
                     <div class="box">
                         <a href="photography.html" class="image fit"><img src="images/photography/LauraMatt/photography13.jpg"
-                                alt="" /></a>
+                                alt="Laura & Matt's love story" /></a>
                         <div class="inner">
                             <h3>Nascetur nunc varius commodo</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/360/eastside.jpg" alt="East Side Gallery, Berlin" /></a>
                         <div class="inner">
                             <h3>Nascetur nunc varius commodo</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
