--- a/photography.html
+++ b/photography.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Full Motion</title>
+    <title>Z</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -45,52 +45,53 @@
                 <div class="thumbnails">
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="assets/Branding/Folder.jpg"
-                                alt="" /></a>
+                        <a href="TABS/photo/andrewrachel.html" class="image fit"><img src="images/photography/AndrewRachel/photography2.jpg"
+                                alt="an intimate giggle" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
+                            <h3>an intimate giggle</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
                                 nunc
                                 non. Mi accumsan.</p>
-                            <a href="andrewrachel.html" class="button fit" data-poptrox="youtube,800x400">ANDREW
-                                & RACHEL</a>
+                            <a href="andrewrachel.html" class="button fit">ANDREW &
+                                RACHEL</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="assets/book/Cover double.png"
-                                alt="" /></a>
+                        <a href="TABS/photo/beckysteve.html" class="image fit"><img src="images/photography/BeckySteve/photography8.jpg"
+                                alt="a marital candid" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
+                            <h3>a marital candid</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
                                 nunc
                                 non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">BECKY
+                            <a href="TABS/photo/beckysteve.html" class="button style2 fit">BECKY
                                 & STEVE</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="assets/images/Malta/DSC_0062-14-26.jpg"
-                                alt="" /></a>
+                        <a href="TABS/photo/lauramatt.html" class="image fit"><img src="images/photography/LauraMatt/photography13.jpg"
+                                alt="a kiss by a door" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
+                            <h3>a kiss by a door</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
                                 nunc
                                 non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">LAURA
+                            <a href="TABS/photo/lauramatt.html" class="button style3 fit">LAURA
                                 & MATT</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+                        <a href="TABS/photo/mdinamalta.html" class="image fit"><img src="images/photography/Malta/photography18.jpg"
+                                alt="Window between bastions" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
+                            <h3>a window between walls</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
                                 nunc
                                 non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">MALTA</a>
+                            <a href="TABS/photo/mdinamalta.html" class=" button style2 fit">MALTA</a>
                         </div>
                     </div>
 
