--- a/about.html
+++ b/about.html
@@ -2,22 +2,34 @@
 <html lang="en">
 
 <head>
-    <title>Full Motion</title>
+    <title>ZULUWIZE</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/mainstyle.css" />
+    <link rel="stylesheet" href="mainstyle.css" />
 </head>
 
 <body id="top">
+    <!-- NAV BAR-->
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <div class="title-wrapper-1">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
     </nav>
-
-    <h1>About</h1>
+    <img class="img-zoe" src="images/banners/zoebanner.jpg" alt="Malta">
+    </div><br><br> <br><br> <br><br>
+    <div class="title-wrapper-1">
+        <h3>Defining a Zoë;</h3>
+        <h4>An over-zealous design student, photographer, and content creator. She's medically certified to be
+            intolerant to all things norm, and bases her diet on going against the flow. ️<br><br>
+            With a voice that can be heard from miles away, this unstoppable extrovert will strategize a brand concept,
+            interactive marketing, and experiential design displays before you could finish the word “idea”. Trust me,
+            she’s been tested.️</h4>
+    </div>
+    </div><br><br> <br>
 </body>
