--- a/branding.html
+++ b/branding.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Z</title>
+    <title>ZULUWIZE</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -27,12 +27,6 @@
                 <source src="assets/mybulb.mp4" type="video/mp4">
             </video> -->
         <img class="img-zoe" src="images/banners/branding.jpg" alt="branding banner">
-        <h1>LOREM IPSUM</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, odit! Optio delectus reiciendis
-            deserunt! Porro voluptas velit autem, delectus reprehenderit perferendis hic debitis excepturi,
-            quisquam ullam vel ex, dolore iure.</p>
-        </header>
-        <a href="#main" class="more">Learn More</a>
     </div>
     </section>
 
@@ -45,56 +39,35 @@
                 <div class="thumbnails">
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/branding/EventPlanner/images2.jpg"
+                        <a href="eventplanner.html" class="image fit"><img src="images/branding/EventPlanner/images2.jpg"
                                 alt="" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="andrewrachel.html" class="button fit" data-poptrox="youtube,800x400">MY EVENT
-                                PLANNER</a>
+                            <h3>Rebranding for MyEventPlanner Ltd</h3>
+                            <p>A trendy look for a versatile company that specialises in events for 3 different target
+                                markets.</p>
+                            <a href="eventplanner.html" class="button fit">MY EVENT PLANNER</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/branding/The Mill/images12.jpg"
-                                alt="" /></a>
+                        <a href="themill.html" class="image fit"><img src="images/branding/The Mill/images12.jpg" alt="" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">THE
-                                MILL</a>
+                            <h3>Branding for The Mill</h3>
+                            <p>A quaint cafe and bakery, found in the village core of a typically quaint Maltese
+                                village.</p>
+                            <a href="themill.html" class="button style2 fit">THE MILL</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/branding/The Yuppie/yuppie2.jpg" /></a>
-                        <div class="
-                                inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">THE
-                                YUPPIE
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- <div class="box">
-                    <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+                        <a href="theyuppie.html" class="image fit"><img src="images/branding/The Yuppie/yuppie2.jpg" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">MALTA</a>
+                            <h3>Corporate Branding for The Yuppie</h3>
+                            <p>A revised corporate look for an 'up-and-coming' youth media hub.</p>
+                            <a href="theyuppie.html" class="button style3 fit">THE YUPPIE</a>
                         </div>
-                    </div> -->
+                    </div>
+
                 </div>
             </div>
         </div>
