--- a/contactB.html
+++ b/contactB.html
@@ -41,7 +41,7 @@
             E-mail:<br>
             <input type="text" name="lastname">
             <br><br>
-            <input type="submit" value="Submit" onclick="window.location.href='contactB.html'" />
+            <input type="submit" value="Submit">
         </form>
     </div>
 
