--- a/eventplanner.html
+++ b/eventplanner.html
@@ -15,8 +15,6 @@
 
 <body id="top">
     <!-- NAV BAR-->
-
-
     <div class="container">
 
         <h1>
@@ -40,8 +38,9 @@
         </br>
         </br>
 
-        <h2> Rachel & Andrew Candid Portraiture </h2>
-        <h3> The best of friends, a goofy duo, and greater lovers. </h3>
+        <h2> Rebranding for MyEventPlanner Ltd </h2>
+        <h3> A trendy look for a versatile company that specialises in events for 3 different target markets. </h3>
+        <br>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -53,19 +52,47 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/photography/RachelAndrew/ar.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/branding/EventPlanner/images1.jpg" alt="My Event Planner Rebranding" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar2.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/branding/EventPlanner/images2.jpg" alt="My Event Planner Rebranding" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar3.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/branding/EventPlanner/images10.jpg" alt="My Event Planner Rebranding" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/branding/EventPlanner/images9.jpg" alt="My Event Planner Rebranding" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/branding/EventPlanner/images3.jpg" alt="My Event Planner Rebranding" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/branding/EventPlanner/images6.jpg" alt="My Event Planner Rebranding" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/branding/EventPlanner/images8.jpg" alt="My Event Planner Rebranding" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/branding/EventPlanner/images11.jpg" alt="My Event Planner Rebranding" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/branding/EventPlanner/images4.jpg" alt="My Event Planner Rebranding" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/branding/EventPlanner/images5.jpg" alt="My Event Planner Rebranding" style="width:100%;">
                 </div>
             </div>
 
-            <!-- Left and right controls -->
+            <!-- Left and right buttons -->
             <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
                 <span class="sr-only">Previous</span>
