--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Full Motion</title>
+    <title>ZULUWIZE</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -26,13 +26,8 @@
         <!--  <video>
             <source src="assets/mybulb.mp4" type="video/mp4">
         </video> -->
-        <img class="img-zoe" src="images/banners/zoebanner.jpg" alt="Zoe Photography">
-        <h1>LOREM IPSUM</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, odit! Optio delectus reiciendis
-            deserunt! Porro voluptas velit autem, delectus reprehenderit perferendis hic debitis excepturi,
-            quisquam ullam vel ex, dolore iure.</p>
+        <img class="img-zoe" src="images/banners/powerhouse.jpg" alt="Zoe Photography">
         </header>
-        <a href="#main" class="more">Learn More</a>
     </div>
     </section>
 
@@ -57,14 +52,13 @@
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/book/images17.jpg"
-                                alt="SAC yearbook 2018" /></a>
+                        <a href="design.html" class="image fit"><img src="images/book/images17.jpg" alt="SAC yearbook 2018" /></a>
                         <div class="inner">
                             <h3>Nascetur nunc varius commodo</h3>
                             <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
                                 nunc
                                 non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit">DESIGN</a>
+                            <a href="design.html" class="button style2 fit">DESIGN</a>
                         </div>
                     </div>
 
@@ -81,36 +75,19 @@
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/360/eastside.jpg" alt="East Side Gallery, Berlin" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit">360
-                                VIDEO</a>
+                            <h3>But what is a 'Zoë'?</h3>
+                            <p>If you're truly curiouser and curiouser, click on the link below to find out more.</p>
+                            <a href="about.html" class="button style3 fit">ABOUT</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit">ABOUT</a>
-                        </div>
-                    </div>
-
-                    <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-                        <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button fit">CONTACT</a>
+                            <h3>Want to get in touch?</h3>
+                            <p> Whether it's popping over for tea, dropping a line, or signing up to my newsletter,
+                                click on the link below.</p>
+                            <a href="contact.html" class="button fit">CONTACT</a>
                         </div>
                     </div>
                 </div>
