--- a/lauramatt.html
+++ b/lauramatt.html
@@ -15,8 +15,6 @@
 
 <body id="top">
     <!-- NAV BAR-->
-
-
     <div class="container">
 
         <h1>
@@ -40,8 +38,8 @@
         </br>
         </br>
 
-        <h2> Rachel & Andrew Candid Portraiture </h2>
-        <h3> The best of friends, a goofy duo, and greater lovers. </h3>
+        <h2> Laura and Matt - Candid Portraiture </h2>
+        <h3>I followed these two round Mdina, like fly on the wall, as they enjoyed their afternoon. </h3>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -53,19 +51,27 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/photography/RachelAndrew/ar.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/photography/LauraMatt/photography11.jpg" alt="Laura and Matt candid" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar2.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/photography/LauraMatt/photography12.jpg" alt="Laura and Matt candid" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar3.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/photography/LauraMatt/photography13.jpg" alt="Laura and Matt candid" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/photography/LauraMatt/photography14.jpg" alt="Laura and Matt candid" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/photography/LauraMatt/photography15.jpg" alt="Laura and Matt candid" style="width:100%;">
                 </div>
             </div>
 
-            <!-- Left and right controls -->
+            <!-- Left and right buttons -->
             <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
                 <span class="sr-only">Previous</span>
