--- a/mdinamalta.html
+++ b/mdinamalta.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>ZULUWIZE</title>
+    <title>Full Motion</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -15,8 +15,6 @@
 
 <body id="top">
     <!-- NAV BAR-->
-
-
     <div class="container">
 
         <h1>
@@ -40,8 +38,8 @@
         </br>
         </br>
 
-        <h2> Rachel & Andrew Candid Portraiture </h2>
-        <h3> The best of friends, a goofy duo, and greater lovers. </h3>
+        <h2> Mdina, Malta </h2>
+        <h3> A purposeful flaneur; lost in the city of silence, and ever filled with wander. </h3>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -53,19 +51,35 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/photography/RachelAndrew/ar.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/photography/Malta/photography16.jpg" alt="Mdina, Malta" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar2.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/photography/Malta/photography17.jpg" alt="Mdina, Malta" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar3.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/photography/Malta/photography18.jpg" alt="Mdina, Malta" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/photography/Malta/photography19.jpg" alt="Mdina, Malta" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/photography/Malta/photography20.jpg" alt="Mdina, Malta" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/photography/Malta/photography21.jpg" alt="Mdina, Malta" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/photography/Malta/photography22.jpg" alt="Mdina, Malta" style="width:100%;">
                 </div>
             </div>
 
-            <!-- Left and right controls -->
+            <!-- Left and right buttons -->
             <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
                 <span class="sr-only">Previous</span>
