--- a/nik.html
+++ b/nik.html
@@ -15,15 +15,13 @@
 
 <body id="top">
     <!-- NAV BAR-->
-
-
     <div class="container">
 
         <h1>
             <nav>
                 <div class="title-wrapper-2">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -40,8 +38,8 @@
         </br>
         </br>
 
-        <h2> Rachel & Andrew Candid Portraiture </h2>
-        <h3> The best of friends, a goofy duo, and greater lovers. </h3>
+        <h2> Blue Eyes </h2>
+        <h3>Close up, and intimate portraiture making use of experimental lighting. </h3>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -53,19 +51,27 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/photography/RachelAndrew/ar.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="" alt="Laura and Matt candid" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar2.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/photography/nik/photo2.jpg" alt="Nikolai" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar3.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/photography/nik/photo3.jpg" alt="Nikolai" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/photography/nik/photo4.jpg" alt="Nikolai" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/photography/nik/photo5.jpg" alt="Nikolai" style="width:100%;">
                 </div>
             </div>
 
-            <!-- Left and right controls -->
+            <!-- Left and right buttons -->
             <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
                 <span class="sr-only">Previous</span>
