--- a/photography.html
+++ b/photography.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Z</title>
+    <title>ZULUWIZE</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -27,12 +27,6 @@
                 <source src="assets/mybulb.mp4" type="video/mp4">
             </video> -->
         <img class="img-zoe" src="images/banners/photographybanner.jpg" alt="Malta">
-        <h1>LOREM IPSUM</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, odit! Optio delectus reiciendis
-            deserunt! Porro voluptas velit autem, delectus reprehenderit perferendis hic debitis excepturi,
-            quisquam ullam vel ex, dolore iure.</p>
-        </header>
-        <a href="#main" class="more">Learn More</a>
     </div>
     </section>
 
@@ -45,75 +39,57 @@
                 <div class="thumbnails">
 
                     <div class="box">
-                        <a href="TABS/photo/andrewrachel.html" class="image fit"><img src="images/photography/AndrewRachel/photography2.jpg"
+                        <a href="andrewrachel.html" class="image fit"><img src="images/photography/RachelAndrew/ar2.jpg"
                                 alt="an intimate giggle" /></a>
                         <div class="inner">
                             <h3>an intimate giggle</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
+                            <p> The best of friends, a goofy duo, and greater lovers, sharing a candid moment in Gozo.</p>
                             <a href="andrewrachel.html" class="button fit">ANDREW &
                                 RACHEL</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="TABS/photo/beckysteve.html" class="image fit"><img src="images/photography/BeckySteve/photography8.jpg"
+                        <a href="beckysteve.html" class="image fit"><img src="images/photography/BeckySteve/photography8.jpg"
                                 alt="a marital candid" /></a>
                         <div class="inner">
                             <h3>a marital candid</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="TABS/photo/beckysteve.html" class="button style2 fit">BECKY
+                            <p>These two lovebirds newly wed on an early summer eve, in an intimate setting.</p>
+                            <a href="beckysteve.html" class="button style2 fit">BECKY
                                 & STEVE</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="TABS/photo/lauramatt.html" class="image fit"><img src="images/photography/LauraMatt/photography13.jpg"
+                        <a href="lauramatt.html" class="image fit"><img src="images/photography/LauraMatt/photography13.jpg"
                                 alt="a kiss by a door" /></a>
                         <div class="inner">
                             <h3>a kiss by a door</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="TABS/photo/lauramatt.html" class="button style3 fit">LAURA
+                            <p>I followed these two round Mdina, like fly on the wall, as they enjoyed their afternoon.
+                            </p>
+                            <a href="lauramatt.html" class="button style3 fit">LAURA
                                 & MATT</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="TABS/photo/mdinamalta.html" class="image fit"><img src="images/photography/Malta/photography18.jpg"
+                        <a href="mdinamalta.html" class="image fit"><img src="images/photography/Malta/photography18.jpg"
                                 alt="Window between bastions" /></a>
                         <div class="inner">
-                            <h3>a window between walls</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="TABS/photo/mdinamalta.html" class=" button style2 fit">MALTA</a>
-                        </div>
-                    </div>
-
-                    <!--<div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-                        <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+                            <h3>a city of silent secrets</h3>
+                            <p>A purposeful flaneur; lost in the city of silence, and ever filled with wander.</p>
+                            <a href="mdinamalta.html" class=" button style2 fit">MALTA</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+                        <a href="nik.html" class="image fit"><img src="images/photography/nik/photo3.jpg" alt="" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
-                            <a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a> -->
+                            <h3>blue eyes</h3>
+                            <p>Close up, and intimate portraiture making use of experimental lighting.</p>
+                            <a href="nik.html" class="button style3 fit">NIKOLAI</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
