--- a/sacyearbook.html
+++ b/sacyearbook.html
@@ -15,8 +15,6 @@
 
 <body id="top">
     <!-- NAV BAR-->
-
-
     <div class="container">
 
         <h1>
@@ -40,8 +38,9 @@
         </br>
         </br>
 
-        <h2> Rachel & Andrew Candid Portraiture </h2>
-        <h3> The best of friends, a goofy duo, and greater lovers. </h3>
+        <h2>St Aloysius College Yearbook 2018</h2>
+        <h3>An annual custom-made photo album, comprised of a collection of photographs in collage
+            format, featuring a spectral flip-through.</h3>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -53,29 +52,28 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/photography/RachelAndrew/ar.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/book/images15.jpg" alt="SAC Yearbook 2018 Cover" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar2.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/book/images16.jpg" alt="SAC Yearbook 2018 Cover" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar3.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/book/images17.jpg" alt="SAC Yearbook 2018 opened page" style="width:100%;">
                 </div>
+
+                <!-- Left and right buttons -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
-    </div>
 
 </body>
 
