--- a/theyuppie.html
+++ b/theyuppie.html
@@ -15,8 +15,6 @@
 
 <body id="top">
     <!-- NAV BAR-->
-
-
     <div class="container">
 
         <h1>
@@ -40,8 +38,9 @@
         </br>
         </br>
 
-        <h2> Rachel & Andrew Candid Portraiture </h2>
-        <h3> The best of friends, a goofy duo, and greater lovers. </h3>
+        <h2> Aditional Branding for The Yuppie </h2>
+        <h3> A revised corporate look for an 'up-and-coming' youth media hub. </h3>
+        <br>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -53,19 +52,27 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/photography/RachelAndrew/ar.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/branding/The Yuppie/yuppie.jpg" alt="The Yuppie Corporate Branding" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar2.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/branding/The Yuppie/yuppie2.jpg" alt="The Yuppie Corporate Branding" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="images/photography/RachelAndrew/ar3.jpg" alt="Andrew and Rachel candid" style="width:100%;">
+                    <img src="images/branding/The Yuppie/yuppie3.jpg" alt="The Yuppie Corporate Branding" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/branding/The Yuppie/yuppie4.jpg" alt="The Yuppie Corporate Branding" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="images/branding/The Yuppie/yuppie5.jpg" alt="The Yuppie Corporate Branding" style="width:100%;">
                 </div>
             </div>
 
-            <!-- Left and right controls -->
+            <!-- Left and right buttons -->
             <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
                 <span class="sr-only">Previous</span>
