--- a/about.html
+++ b/about.html
@@ -21,15 +21,25 @@
             </ul>
         </div>
     </nav>
+
     <img class="img-zoe" src="images/banners/zoebanner.jpg" alt="Malta">
-    </div><br><br> <br><br> <br><br>
+
+    </div><br><br><br><br><br><br>
+
     <div class="title-wrapper-1">
         <h3>Defining a Zoë;</h3>
         <h4>An over-zealous design student, photographer, and content creator. She's medically certified to be
             intolerant to all things norm, and bases her diet on going against the flow. ️<br><br>
             With a voice that can be heard from miles away, this unstoppable extrovert will strategize a brand concept,
             interactive marketing, and experiential design displays before you could finish the word “idea”. Trust me,
-            she’s been tested.️</h4>
+            she’s been tested.️ <br><br> Born on August 5th '98, creative skills were noticable to close relatives from
+            an early age. Her 8 year dream of becoming a fashion designer was over by the age of 14, when she realised
+            that her portfolio was too concise. After investing in a black plastic A3 book-folder, she began her
+            compilation.
+            <br><br> Roughly 6 years later, the soon-to-be graduate holds a vast portfolio ranging from editorial
+            design,
+            photography, illustration, social media content, installations, brand concepts, packaging designs,
+            augmented reality animations, virtual reality videography, and more, proudly.</h4>
     </div>
     </div><br><br> <br>
 </body>
