--- a/branding.html
+++ b/branding.html
@@ -21,6 +21,7 @@
             </ul>
         </div>
     </nav>
+
     <!-- TITLE IMAGE -->
     <div class="title-wrapper">
         <!--  <video>
@@ -28,7 +29,6 @@
             </video> -->
         <img class="img-zoe" src="images/banners/branding.jpg" alt="branding banner">
     </div>
-    </section>
 
     <!-- Main -->
     <div class="wrapper">
@@ -40,7 +40,7 @@
 
                     <div class="box">
                         <a href="eventplanner.html" class="image fit"><img src="images/branding/EventPlanner/images2.jpg"
-                                alt="" /></a>
+                                alt="eventplanner" /></a>
                         <div class="inner">
                             <h3>Rebranding for MyEventPlanner Ltd</h3>
                             <p>A trendy look for a versatile company that specialises in events for 3 different target
@@ -50,7 +50,7 @@
                     </div>
 
                     <div class="box">
-                        <a href="themill.html" class="image fit"><img src="images/branding/The Mill/images12.jpg" alt="" /></a>
+                        <a href="themill.html" class="image fit"><img src="images/branding/The Mill/images12.jpg" alt="eventplanner" /></a>
                         <div class="inner">
                             <h3>Branding for The Mill</h3>
                             <p>A quaint cafe and bakery, found in the village core of a typically quaint Maltese
@@ -60,17 +60,16 @@
                     </div>
 
                     <div class="box">
-                        <a href="theyuppie.html" class="image fit"><img src="images/branding/The Yuppie/yuppie2.jpg" /></a>
+                        <a href="theyuppie.html" class="image fit"><img src="images/branding/The Yuppie/yuppie2.jpg"
+                                alt="eventplanner" /></a>
                         <div class="inner">
                             <h3>Corporate Branding for The Yuppie</h3>
                             <p>A revised corporate look for an 'up-and-coming' youth media hub.</p>
                             <a href="theyuppie.html" class="button style3 fit">THE YUPPIE</a>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </body>
