--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
         <!--  <video>
             <source src="assets/mybulb.mp4" type="video/mp4">
         </video> -->
-        <img class="img-zoe" src="images/banners/powerhouse.jpg" alt="Zoe Photography">
-        </header>
+        <img class="img-zoe" src="images/banners/creative.jpg" alt="Zoe Photography">
     </div>
-    </section>
 
     <!-- Main -->
     <div class="wrapper">
@@ -43,10 +41,8 @@
                         <a href="branding.html" class="image fit"><img src="images/branding/EventPlanner/images2.jpg"
                                 alt="event planner sign" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
+                            <h3> The reinvention of brands </h3>
+                            <p> A concise portfolio of brands reimagined; from billboards to threads.</p>
                             <a href="branding.html" class="button fit">BRANDING</a>
                         </div>
                     </div>
@@ -54,10 +50,8 @@
                     <div class="box">
                         <a href="design.html" class="image fit"><img src="images/book/images17.jpg" alt="SAC yearbook 2018" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
+                            <h3> The creation of commercial art </h3>
+                            <p>It doesn't take much to recreate what already exhists, but it takes power for invention.</p>
                             <a href="design.html" class="button style2 fit">DESIGN</a>
                         </div>
                     </div>
@@ -66,10 +60,9 @@
                         <a href="photography.html" class="image fit"><img src="images/photography/LauraMatt/photography13.jpg"
                                 alt="Laura & Matt's love story" /></a>
                         <div class="inner">
-                            <h3>Nascetur nunc varius commodo</h3>
-                            <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis
-                                nunc
-                                non. Mi accumsan.</p>
+                            <h3>Alternative viewpoints</h3>
+                            <p>Being a photography is about noticing details, and looking at moments and things
+                                differently.</p>
                             <a href="photography.html" class="button style3 fit">PHOTOGRAPHY</a>
                         </div>
                     </div>
@@ -97,24 +90,18 @@
         <!-- Footer -->
         <footer id="footer">
             <div class="inner">
-                <h2>Etiam veroeros lorem</h2>
-                <p>Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi, ac imperdiet dolor
-                    tincidunt
-                    nec.
-                    Ut erat lectus, dictum sit amet lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit,
-                    consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi luctus auctor. Donec sit amet
-                    dolor in
-                    diam feugiat venenatis. </p>
-
-                <ul class="icons">
-                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-                </ul>
+                <h2>Redefining brilliance, and creativity.</h2>
+                <p> You don’t need to reinvent the wheel to be brilliant. And you can’t buy ‘brilliant’. <br>
+                    Brilliance is
+                    resilience, dedication, and a passion to move forward. <br> <br> I know brilliance. It’s the cups
+                    of
+                    instant
+                    coffee in the wee hours of the morning. It’s the scribbles and crumpled paper on a crumby desk.
+                    It’s the itchiness and the fervour of 19 tabs open at once. It’s the ecstasy of breakthrough at the
+                    point of the most intimate frustration.
+                </p>
             </div>
         </footer>
-    </div>
     </div>
 </body>
 
